--- a/_posts/2016-06-16-test.markdown
+++ b/_posts/2016-06-16-test.markdown
@@ -8,7 +8,7 @@ quote: 端午节
 
 ### 导语：
 
->写在前面，本文将要指引你入门Markdown，然后指导你放弃者们编辑语言。
+>写在前面，本文将要指引你入门Markdown，然后指导你放弃这门语言。
 
 #### o(∩∩)o...哈哈
 
@@ -17,8 +17,9 @@ quote: 端午节
 *斜体语法* 
 
 >
-在`PHP`中，使用`echo 'hello world'` 输出 `Hello World`,学习**百度**是本数血红素
-asd 
+	<?php
+		echo 'hello world!';
+	?>
 
 
 正常的写法是怎么样的呢？
